[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/Dialog/SelectActionInput.gd" type="Script" id=1]
[ext_resource path="res://addons/Dialog/Graphics/cancel_button_normal.png" type="Texture" id=2]
[ext_resource path="res://addons/Dialog/Graphics/cancel_button_over.png" type="Texture" id=3]
[ext_resource path="res://addons/Dialog/Graphics/ok_button_over.png" type="Texture" id=4]
[ext_resource path="res://addons/Dialog/Graphics/ok_button_normal.png" type="Texture" id=5]
[ext_resource path="res://addons/Dialog/Graphics/minus_button_normal.png" type="Texture" id=6]
[ext_resource path="res://addons/Dialog/Graphics/minus_button_over.png" type="Texture" id=7]
[ext_resource path="res://addons/Dialog/Graphics/plus_button_normal.png" type="Texture" id=8]
[ext_resource path="res://addons/Dialog/Graphics/plus_button_over.png" type="Texture" id=9]
[ext_resource path="res://addons/Dialog/Graphics/minus_button_disabled.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SelectActionInput" type="Panel"]
margin_right = 329.0
margin_bottom = 375.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 309.0
margin_bottom = 22.0
rect_min_size = Vector2( 260, 22 )
custom_colors/font_color = Color( 0.188235, 0.854902, 0, 1 )
text = "Input Actions:"

[node name="HBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 309.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 309.0
margin_bottom = 14.0
rect_min_size = Vector2( 260, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Actions used to Resume Dialog when is paused:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_top = 18.0
margin_right = 309.0
margin_bottom = 50.0

[node name="ActionsOptions1" type="OptionButton" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_top = 6.0
margin_right = 237.0
margin_bottom = 26.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Button" type="TextureButton" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 241.0
margin_right = 273.0
margin_bottom = 32.0
hint_tooltip = "Add action"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="RemoveButton1" type="TextureButton" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 277.0
margin_right = 309.0
margin_bottom = 32.0
hint_tooltip = "Remove action selected"
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 10 )

[node name="ItemList1" type="ItemList" parent="VBoxContainer/HBoxContainer2"]
margin_top = 54.0
margin_right = 309.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 80 )

[node name="HBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 309.0
margin_bottom = 322.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 309.0
margin_bottom = 14.0
rect_min_size = Vector2( 260, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Action used to select a choice:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
margin_top = 18.0
margin_right = 309.0
margin_bottom = 38.0

[node name="ActionsOptions2" type="OptionButton" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 309.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
margin_top = 42.0
margin_right = 309.0
margin_bottom = 158.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_right = 152.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer"]
margin_right = 152.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 44.0
margin_bottom = 23.0
text = "KEY UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 32.0
hint_tooltip = "Add action"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="RemoveButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 116.0
margin_bottom = 32.0
hint_tooltip = "Remove action selected"
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 10 )

[node name="ItemList2" type="ItemList" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 152.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 80 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_left = 156.0
margin_right = 309.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer2"]
margin_right = 153.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_top = 9.0
margin_right = 70.0
margin_bottom = 23.0
text = "KEY DOWN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 74.0
margin_right = 106.0
margin_bottom = 32.0
hint_tooltip = "Add action"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="RemoveButton3" type="TextureButton" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 110.0
margin_right = 142.0
margin_bottom = 32.0
hint_tooltip = "Remove action selected"
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 10 )

[node name="ItemList3" type="ItemList" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer2"]
margin_top = 36.0
margin_right = 153.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 80 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 326.0
margin_right = 309.0
margin_bottom = 358.0
alignment = 2

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 241.0
margin_right = 273.0
margin_bottom = 32.0
hint_tooltip = "(Enter) Apply."
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 277.0
margin_right = 309.0
margin_bottom = 32.0
hint_tooltip = "(ESC) Cancel."
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
[connection signal="button_down" from="VBoxContainer/HBoxContainer2/HBoxContainer/Button" to="." method="_on_RESUME_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer2/HBoxContainer/RemoveButton1" to="." method="_on_RemoveButton1_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer/HBoxContainer/Button" to="." method="_on_UP_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer/HBoxContainer/RemoveButton2" to="." method="_on_RemoveButton2_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer2/HBoxContainer/Button" to="." method="_on_DOWN_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer2/HBoxContainer/RemoveButton3" to="." method="_on_RemoveButton3_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/TextureButton2" to="." method="_on_ok_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="hide"]
